# nanobackbone_atlas

./: .gitignore  README.md
include/: utils.h
models/: nanotrack_all.om  nanotrack_all_2.om  nanotrack_backbone_om.om
npydata/original/: output1.npy  output2.npy
npydata/quant/: output1.npy  output2.npy
python/: bin2npy.py  get_frame_test.py
scripts/: build.sh  compile_run.ps1  nanotracker_build.sh  nanotracker_debug.sh  run.sh
src/: CMakeLists.txt  label.h  main.cpp  main_all.cpp  main_backbone.cpp
